Fix bad contrast in links in custom page footers.

--- a/sqlpage/sqlpage.css
+++ b/sqlpage/sqlpage.css
@@ -21,3 +21,8 @@ td > p {
 ::-webkit-scrollbar-thumb {
   background: var(--tblr-primary) !important;
 }
+
+.text-secondary a {
+  color: inherit;
+  text-decoration: underline;
+}
